initial remote interaction as apps
Former-commit-id: 358610e3e341cf22f35fb2649deeb048da6b454f

--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "decompress-zip": "latest",
     "gm": "latest",
     "imageinfo": "latest",
+    "json5": "^0.2.0",
+    "mime": "latest",
     "multiparty": "latest",
     "node-ffprobe": "latest",
     "request": "latest",
     "ws": "latest",
     "ytdl": "latest",
-    "json5": "^0.2.0",
     "jshint": "^2.4.4",
     "jslint": "^0.3.1"
   },
