Updated youtube download package
Former-commit-id: 91576c80f3840a25ddad5fd18aaa4e2d88ab3979

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "node-ffprobe": "latest",
     "request": "latest",
     "ws": "latest",
-    "ytdl": "latest",
+    "ytdl-core": "latest",
     "jshint": "latest",
     "commander": "latest",
     "colors": "latest",
