Replaced mime_type with applicationRegistry.json
Former-commit-id: f7278221010a4e10baa5bc71ddc3b62b738b9832

--- a/applicationRegistry.json
+++ b/applicationRegistry.json
@@ -2,8 +2,8 @@
     "apps": [
         {
             "name": "pdfViewer",
-            "fileTypes": [
-                "pdf"
+            "mimeTypes": [
+                "application/pdf"
             ]
         }
     ]
