Disabled insteractive mode for startup script
Former-commit-id: 6bd83176344828551eda0db73230b58b0fe968a0

--- a/GO-scripts/sage2Server.service
+++ b/GO-scripts/sage2Server.service
@@ -11,7 +11,7 @@ After=multi-user.target
 Wants=display-manager.service
 
 [Service]
-ExecStart=/usr/bin/node server.js
+ExecStart=/usr/bin/node server.js -i
 WorkingDirectory=/home/sage/sage2
 User=sage
 Group=users
