--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
 		"ytdl-core": "latest"
 	},
 	"bundledDependencies": [],
-	"devDependencies": {},
+	"devDependencies": {
+        "mocha": "^2.0.1",
+        "mocha-jshint": "^0.0.9"
+    },
 	"engines": {
 		"node": ">=0.10.x"
 	},
@@ -67,7 +70,8 @@
 		"start": "node server.js",
 		"hint": "./node_modules/jshint/bin/jshint --verbose server.js src/*.js",
 		"hint_client": "./node_modules/jshint/bin/jshint --verbose public_HTTPS/src/*.js",
-		"doc": "yuidoc -c doc/yuidoc.json"
+		"doc": "yuidoc -c doc/yuidoc.json",
+        "test": "./node_modules/mocha/bin/_mocha --slow=5000 --timeout=10000 ./test/*.js"
 	},
 	"license": "SAGE2-Software-License"
 }
