Added directory support
Former-commit-id: 2c3cb63822375471c9f0bd9d5fa9fba35cf63181

--- a/nativeApps.json
+++ b/nativeApps.json
@@ -4,7 +4,8 @@
             "name": "pdf_viewer",
             "types": [
                 "application/pdf"
-            ]
+            ],
+            "directory": "pdfs"
         },
         {
             "name": "image_viewer",
@@ -16,7 +17,8 @@
                 "image/tiff",
                 "image/svg+xml",
                 "image/vnd.adobe.photoshop"
-            ]
+            ],
+            "directory": "images"
         },
         {
             "name": "movie_player",
@@ -25,7 +27,8 @@
                 "video/x-m4v",
                 "video/webm",
                 "video/youtube"
-            ]
+            ],
+            "directory": "videos"
         },
         {
             "name": "custom_app",
@@ -33,7 +36,8 @@
                 "application/zip",
                 "application/x-zip-compressed",
                 "application/custom"
-            ]
+            ],
+            "directory": "apps"
         },
         {
             "name": "media_stream",
