initial streaming working - need to update valid pixel blocks per display
Former-commit-id: bed69a4f6ea6d020b92f14f5658d5e06d6215f22

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"jshint": "latest",
 		"json5": "latest",
 		"mime": "latest",
+		"node-demux": "latest",
 		"qr-image": "latest",
 		"request": "latest",
 		"sprint": "^0.3.1",
