fixed file registry bug
Former-commit-id: 9ae321dc856caa73deb1967021adc3aa2b41e6c0

--- a/nativeApps.json
+++ b/nativeApps.json
@@ -25,6 +25,9 @@
             "types": [
                 "video/mp4",
                 "video/x-m4v",
+                "video/x-matroska",
+                "video/x-msvideo",
+                "video/quicktime",
                 "video/webm",
                 "video/youtube"
             ],
