Work in progress, annotation window working.
Former-commit-id: 6efb848a0cf25e1c3453059a830c105d25e1244b

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
 		"node": ">=0.10.x"
 	},
 	"scripts": {
-		"start": "./node_modules/.bin/nodemon server.js -l",
+		"start": "./node_modules/.bin/node server.js -l",
 		"hint": "./node_modules/jshint/bin/jshint --verbose server.js src/*.js",
 		"hint_client": "./node_modules/jshint/bin/jshint --verbose public/src/*.js",
 		"doc": "yuidoc -c doc/yuidoc.json",
