include interactable manager in server
Former-commit-id: ac05ac1e2ffaed9344c5398d403d0de65a40249c
Former-commit-id: d6d82ba0019f7da8fb9f606587d063aefbb4f357

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"node-demux": "latest",
 		"node-json-db": "latest",
 		"qr-image": "latest",
+		"rbush": "latest",
 		"request": "latest",
 		"sprint": "^0.3.1",
 		"twit": "latest",
