Switched npm test to grunt
Former-commit-id: 32e85663b59e401ca4a3065455f1fc6d71d3c3d5
Former-commit-id: 03367a07eaf38a97012bdd24eb00554d611e77f0

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"eslint-grunt": "latest",
 		"grunt-contrib-yuidoc": "latest",
 		"grunt-contrib-uglify": "latest",
+        "grunt-mocha-cli": "latest",
 		"nodemon": "latest",
 		"eslint": "latest",
 		"kthxbai": "latest",
@@ -83,7 +84,7 @@
 		"lint":    "./node_modules/.bin/grunt eslint",
 		"doc":     "./node_modules/.bin/grunt yuidoc",
 		"mini":    "./node_modules/.bin/grunt uglify --verbose",
-		"test":    "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --slow=5000 --timeout=15000 ./test/*.js",
+		"test":    "./node_modules/.bin/grunt all",
 		"in":      "node ./install_dependencies.js",
 		"inprod":  "node ./install_dependencies.js --prod"
 	},
