--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"request": "latest",
 		"sprint": "^0.3.1",
 		"twit": "latest",
+		"mv": "latest",
 		"ws": "latest",
 		"semver": "latest",
 		"ytdl-core": "latest"
