using websocketio module (instead of custom stand alone file), and grabbing binary modules from auto builds (still need auto Mac OS X builds)
Former-commit-id: f96f80cc3083b400fe9a443b70ceeba2a9109afd
Former-commit-id: 9ae65b4877782d3f66a6e889b3a227ed765101c8

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"sprint": "^0.3.1",
 		"twit": "latest",
 		"mv": "latest",
-		"ws": "latest",
+		"websocketio": "latest",
 		"semver": "latest",
 		"fsmonitor": "latest",
 		"ytdl-core": "latest"
