Edits to appveyor file deployment
Former-commit-id: d10e50419b9dc52bb609f4e3e05ce51a96b11aa0
Former-commit-id: b4b2cc1276a62868be9b7fb38fac5c8b5981b93f

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,8 @@ install:
   - 7z x exiftool-9.99.zip
   - move exiftool(-k).exe bin\exiftool.exe
   - move bin\sage2.bat sage2.bat
+  - move bin\wcDisplayLaunch.bat wcDisplayLaunch.bat
+  - move bin\wcStartBinary.bat wcStartBinary.bat
   - move /Y config\defaultWinstall-cfg.json config\defaultWin-cfg.json
   - curl -LsSO http://downloads.ghostscript.com/public/gs916w64.exe
   - 7z x -y  gs916w64.exe $_OUTDIR\bin\ $_OUTDIR\lib -ogs
@@ -70,7 +72,7 @@ install:
   - curl -LsSO https://nodejs.org/dist/v0.12.7/x64/openssl-cli.exe
   - cd ..
   - 'echo {"version": "%APPVEYOR_BUILD_VERSION%", "build": "%APPVEYOR_BUILD_NUMBER%", "commit": "%APPVEYOR_REPO_COMMIT%", "arch": "win%PLATFORM%", "tag_name": "%PLATFORM%_%APPVEYOR_BUILD_VERSION%", "target_commitish": "%APPVEYOR_REPO_BRANCH%", "name": "SAGE2 v%APPVEYOR_BUILD_VERSION% for Win %PLATFORM% devices", "body": "Release of SAGE2 app v%APPVEYOR_BUILD_VERSION%\n Commit by %APPVEYOR_REPO_COMMIT_AUTHOR% \n%APPVEYOR_REPO_COMMIT_MESSAGE%", "prerelease": true} > VERSION.json'
-  - 7z a -tzip sage2-win64-%APPVEYOR_BUILD_VERSION%-%APPVEYOR_REPO_BRANCH%.zip VERSION.json .git sage2.bat AUTHORS GO-scripts Gruntfile.js LICENSE.txt README.md bin lib config doc keys node_modules package.json public server.js src
+  - 7z a -tzip sage2-win64-%APPVEYOR_BUILD_VERSION%-%APPVEYOR_REPO_BRANCH%.zip VERSION.json .git sage2.bat wcDisplayLaunch.bat wcStartBinary.bat AUTHORS GO-scripts Gruntfile.js LICENSE.txt README.md bin lib config doc keys node_modules package.json public server.js src webconStartServer.js
 
 
 build: off
