fixes to the startup bat to work with webcon
Former-commit-id: 2af069300375be977bb4c414577a13ac77267421
Former-commit-id: e9f7d3b2856339f184296ca2f14a0719a19a9cf6

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,6 +49,7 @@ install:
   - move bin\sage2.bat sage2.bat
   - move bin\wcDisplayLaunch.bat wcDisplayLaunch.bat
   - move bin\wcStartBinary.bat wcStartBinary.bat
+  - move bin\StartHere.bat StartHere.bat
   - move /Y config\defaultWinstall-cfg.json config\defaultWin-cfg.json
   - curl -LsSO http://downloads.ghostscript.com/public/gs916w64.exe
   - 7z x -y  gs916w64.exe $_OUTDIR\bin\ $_OUTDIR\lib -ogs
