--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
 		"fsmonitor": "latest",
 		"cheerio": "latest",
 		"ytdl-core": "latest",
-		"snmp-native": "latest"
+		"net-snmp": "latest"
 	},
 	"devDependencies": {
 		"grunt": "latest",
