espresso_image_viewer implemented
Former-commit-id: 595928b343170beb361639e6fa57df853bca917e
Former-commit-id: cee39142b5cbaebaa896c84d0ba2606591c0ea63

--- a/config/nativeApps.json
+++ b/config/nativeApps.json
@@ -8,6 +8,13 @@
             "directory": "pdfs"
         },
         {
+            "name": "xml_viewer",
+            "types": [
+                "application/xml"
+            ],
+            "directory": "xmls"
+        },
+        {
             "name": "image_viewer",
             "types": [
                 "image/jpeg",
@@ -48,5 +55,5 @@
                 "application/stream"
             ]
         }
-    ]
+   ]
 }
