--- a/appveyor.yml
+++ b/appveyor.yml
@@ -99,7 +99,7 @@ install:
   - move public SAGE2
   - move server.js SAGE2
   - move src SAGE2
-  - move bin\.git-credentials %homepath%
+  - move bin\.git-credentials %home%
   - cd SAGE2
   - git init
   - git add .
