--- a/appveyor.yml
+++ b/appveyor.yml
@@ -99,6 +99,13 @@ install:
   - move public SAGE2
   - move server.js SAGE2
   - move src SAGE2
+  - echo where is home: %home%
+  - echo where is homepath: %homepath%
+  - echo %CD%
+  - echo where is home: %HOME%
+  - echo where is homepath: %HOMEPATH%
+  - pwd
+  - ls
   - move bin\.git-credentials ~\
   - cd SAGE2
   - git init
