--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,8 +61,6 @@ install:
   - rmdir /Q /S im\www im\images
   - copy im\* bin
   - rmdir /Q /S im
-  - curl -LsSOk https://bitbucket.org/sage2/sage2/downloads/git-win64-bin.zip
-  - 7z x -y git-win64-bin.zip > nul
   - del /Q *.7z
   - del /Q *.zip
   - cd bin
@@ -111,6 +109,9 @@ install:
   - git remote add origin "https://bitbucket.org/dkobayashi/sage2binaryupdate.git"
   #- git remote add origin "https://Lava%20Lab:1%5ev%5ebitb@bitbucket.org/dkobayashi/sage2binaryupdate.git"
   - git push -f origin master
+  - curl -LsSOk https://bitbucket.org/sage2/sage2/downloads/git-win64-bin.zip
+  - 7z x -y git-win64-bin.zip > nul
+  - del /Q *.zip
   - cd ..
   - ren SAGE2 SAGE2-%APPVEYOR_BUILD_VERSION%
   - 7z a -sfx7z.sfx SAGE2-win64-%APPVEYOR_BUILD_VERSION%-%APPVEYOR_REPO_BRANCH%.exe SAGE2-%APPVEYOR_BUILD_VERSION% > nul
