added articulate_console app

--- a/package.json
+++ b/package.json
@@ -1,105 +1,105 @@
 {
-	"name": "SAGE2",
-	"version": "1.0.0",
-	"private": true,
-	"description": "A cluster-based html viewer used for displaying elements across multiple browser windows",
-	"keywords": [
-		"SAGE",
-		"browser",
-		"collaboration"
-	],
-	"author": "UIC EVL <evl.avatar@gmail.com>",
-	"contributors": [
-		{
-			"name": "Thomas Marrinan",
-			"email": "thomas.j.marrinan@gmail.com"
-		},
-		{
-			"name": "Jillian Aurisano",
-			"email": "jillian.aurisano@gmail.com"
-		},
-		{
-			"name": "Arthur Nishimoto",
-			"email": "arthur.nishimoto@gmail.com"
-		},
-		{
-			"name": "Victor Mateevitsi",
-			"email": "mvictoras@gmail.com"
-		},
-		{
-			"name": "Krishna Bharadwaj",
-			"email": "krishnaknbharadwaj@gmail.com"
-		},
-		{
-			"name": "Dylan Kobayashi",
-			"email": "dylank@hawaii.edu"
-		},
-		{
-			"name": "Luc Renambot",
-			"email": "renambot@gmail.com"
-		}
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://bitbucket.org/sage2/sage2/"
-	},
-	"dependencies": {
-		"color": "latest",
-		"commander": "latest",
-		"decompress-zip": "latest",
-		"fluent-ffmpeg": "latest",
-		"formidable": "latest",
-		"gm": "latest",
-		"imageinfo": "latest",
-		"json5": "latest",
-		"mime": "latest",
-		"node-json-db": "latest",
-		"qr-image": "latest",
-		"rbush": "latest",
-		"request": "latest",
-		"sprint": "^0.3.1",
-		"twit": "latest",
-		"mv": "latest",
-		"semver": "latest",
-		"fsmonitor": "latest",
-		"cheerio": "latest",
-		"ytdl-core": "latest"
-	},
-	"bundledDependencies": [
-		"websocketio",
-		"node-demux"
-	],
-	"devDependencies": {
-		"grunt": "latest",
-		"grunt-cli": "latest",
-		"grunt-eslint": "latest",
-		"grunt-jscs": "latest",
-		"grunt-contrib-yuidoc": "latest",
-		"grunt-contrib-uglify": "latest",
-		"grunt-prompt": "latest",
-		"grunt-mocha-cli": "latest",
-		"jscs": "latest",
-		"nodemon": "latest",
-		"kthxbai": "latest",
-		"mocha": "^2.0.1",
-		"mocha-jshint": "^0.0.9",
-		"istanbul": "^0.3.5",
-		"coveralls": "^2.11.2"
-	},
-	"engines": {
-		"node": ">=0.10.x"
-	},
-	"scripts": {
-		"start":   "node server.js -l",
-		"monitor": "./node_modules/.bin/nodemon -e json,js,html -I -L -i public/uploads server.js -l",
-		"lint":    "./node_modules/.bin/grunt eslint",
-		"style":   "./node_modules/.bin/grunt jscs",
-		"doc":     "./node_modules/.bin/grunt yuidoc",
-		"mini":    "./node_modules/.bin/grunt uglify --verbose",
-		"newapp":  "./node_modules/.bin/grunt newapp",
-		"test":    "./node_modules/.bin/grunt all",
-		"in":      "node ./install_dependencies.js",
-		"inprod":  "node ./install_dependencies.js --prod"
-	},
-	"license": "SAGE2-Software-License"
+  "name": "SAGE2",
+  "version": "1.0.0",
+  "private": true,
+  "description": "A cluster-based html viewer used for displaying elements across multiple browser windows",
+  "keywords": [
+    "SAGE",
+    "browser",
+    "collaboration"
+  ],
+  "author": "UIC EVL <evl.avatar@gmail.com>",
+  "contributors": [
+    {
+      "name": "Thomas Marrinan",
+      "email": "thomas.j.marrinan@gmail.com"
+    },
+    {
+      "name": "Jillian Aurisano",
+      "email": "jillian.aurisano@gmail.com"
+    },
+    {
+      "name": "Arthur Nishimoto",
+      "email": "arthur.nishimoto@gmail.com"
+    },
+    {
+      "name": "Victor Mateevitsi",
+      "email": "mvictoras@gmail.com"
+    },
+    {
+      "name": "Krishna Bharadwaj",
+      "email": "krishnaknbharadwaj@gmail.com"
+    },
+    {
+      "name": "Dylan Kobayashi",
+      "email": "dylank@hawaii.edu"
+    },
+    {
+      "name": "Luc Renambot",
+      "email": "renambot@gmail.com"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/sage2/sage2/"
+  },
+  "dependencies": {
+    "color": "latest",
+    "commander": "latest",
+    "decompress-zip": "latest",
+    "fluent-ffmpeg": "latest",
+    "formidable": "latest",
+    "gm": "latest",
+    "imageinfo": "latest",
+    "json5": "latest",
+    "mime": "latest",
+    "node-json-db": "latest",
+    "qr-image": "latest",
+    "rbush": "latest",
+    "request": "latest",
+    "sprint": "^0.3.1",
+    "twit": "latest",
+    "mv": "latest",
+    "semver": "latest",
+    "fsmonitor": "latest",
+    "cheerio": "latest",
+    "ytdl-core": "latest"
+  },
+  "bundledDependencies": [
+    "websocketio",
+    "node-demux"
+  ],
+  "devDependencies": {
+    "coveralls": "^2.11.2",
+    "grunt": "^0.4.5",
+    "grunt-cli": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-yuidoc": "latest",
+    "grunt-eslint": "latest",
+    "grunt-jscs": "latest",
+    "grunt-mocha-cli": "latest",
+    "grunt-prompt": "latest",
+    "istanbul": "^0.3.5",
+    "jscs": "latest",
+    "kthxbai": "latest",
+    "mocha": "^2.0.1",
+    "mocha-jshint": "^0.0.9",
+    "nodemon": "latest"
+  },
+  "engines": {
+    "node": ">=0.10.x"
+  },
+  "scripts": {
+    "start": "node server.js -l",
+    "monitor": "./node_modules/.bin/nodemon -e json,js,html -I -L -i public/uploads server.js -l",
+    "lint": "./node_modules/.bin/grunt eslint",
+    "style": "./node_modules/.bin/grunt jscs",
+    "doc": "./node_modules/.bin/grunt yuidoc",
+    "mini": "./node_modules/.bin/grunt uglify --verbose",
+    "newapp": "./node_modules/.bin/grunt newapp",
+    "test": "./node_modules/.bin/grunt all",
+    "in": "node ./install_dependencies.js",
+    "inprod": "node ./install_dependencies.js --prod"
+  },
+  "license": "SAGE2-Software-License"
 }
