notes being saved as .md files

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
 		"fsmonitor": "latest",
 		"cheerio": "latest",
 		"sanitizer": "latest",
-		"ytdl-core": "latest"
+		"ytdl-core": "latest",
+		"rtf": "latest"
 	},
 	"bundledDependencies": [
 		"websocketio",
