--- a/config/nativeApps.json
+++ b/config/nativeApps.json
@@ -22,6 +22,13 @@
             "directory": "images"
         },
         {
+            "name": "histologyViewer",
+            "types": [
+                "application/xml"
+            ],
+            "directory": "histology"
+        },
+        {
             "name": "movie_player",
             "types": [
                 "video/mp4",
